--- a/index.html
+++ b/index.html
@@ -245,48 +245,25 @@
             <div class="is-size-5 publication-authors">
               <!-- TODO: Replace with your paper authors and their personal links -->
               <span class="author-block">
-                <a href="https://openreview.net/profile?id=%7EZeyu_Zhang30" target="_blank">Zeyu Zhang</a><sup>*</sup>,</span>
+                <sup><a href="#ustc">1 </a></sup><a href="https://openreview.net/profile?id=%7EZeyu_Zhang30" target="_blank">Zeyu Zhang</a>,</span>
                 <span class="author-block">
-                  <a href="https://scholar.google.com/citations?hl=zh-CN&user=UI5_qZcAAAAJ" target="_blank">Wei Zhai</a><sup>*</sup>,</span>
+                  <sup><a href="#ustc">1 </a></sup><a href="https://scholar.google.com/citations?hl=zh-CN&user=UI5_qZcAAAAJ" target="_blank">Wei Zhai</a>,</span>
                   <span class="author-block">
-                    <a href="https://scholar.google.com/citations?hl=zh-CN&user=ljofw9cAAAAJ" target="_blank">Jian Yang</a>
+                    <sup><a href="#ustc">1 </a></sup><a href="https://scholar.google.com/citations?hl=zh-CN&user=ljofw9cAAAAJ" target="_blank">Jian Yang</a>,
                   </span>
                   <span class="author-block">
-                    <a href="https://scholar.google.com/citations?hl=zh-CN&user=K7rTHNcAAAAJ" target="_blank">Yang Cao</a>
+                    <sup><a href="#ustc">1 </a></sup><a href="https://scholar.google.com/citations?hl=zh-CN&user=K7rTHNcAAAAJ" target="_blank">Yang Cao</a>
                   </span>
                   </div>
 
-                  <div class="is-size-5 publication-authors">
+                  <div class="is-size-5 publication-authors" id="institution">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">Institution Name<br>Conference name and year</span>
+                    <span class="author-block" id="ustc"><sup>1 </sup>University of Science and Technology of China</span>
                     <!-- TODO: Remove this line if no equal contribution -->
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
-                    <div class="publication-links">
-                         <!-- TODO: Update with your arXiv paper ID -->
-                      <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
-                        class="external-link button is-normal is-rounded is-dark">
-                        <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
-                        </span>
-                        <span>Paper</span>
-                      </a>
-                    </span>
-
-                    <!-- TODO: Add your supplementary material PDF or remove this section -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span>
-
                   <!-- TODO: Replace with your GitHub repository URL -->
                   <span class="link-block">
                     <a href="https://github.com/TIPTOEHIGHERZ/MaterialExtraction.git" target="_blank"
