--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <!-- TODO: Add poster image for better preview -->
           <img src="static/images/figures/rectification_hyperparameters_cropped.png" alt="Fourth research result visualization" loading="lazy" style="clip-path: inset(0px); width: 100%; display: block; margin-left: auto; margin-right: auto;"/>
           <h2 class="subtitle has-text-left">
-            Sensitivity analysis of hyperparameters. We demonstrate that a large depth shift $d_{\text{shift}}$ diminishes perspective correction strength by flattening depth, while a small scale factor $[s_x, s_y]$ fills projection holes at the cost of image sharpness.
+            Sensitivity analysis of hyperparameters. We demonstrate that a large depth shift $d_{\text{shift}}$ diminishes perspective correction strength by flattening depth, while a small scale factor $s_{\text{sample}}$ fills projection holes at the cost of image sharpness.
           </h2>
         </div>
         <div class="item item-video6">
@@ -448,7 +448,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3 has-text-centered">3D Overview</h2>
+      <h2 class="title is-3 has-text-centered">3D Examples Overview</h2>
   </div>
 </div>
 </div>
@@ -456,52 +456,144 @@
 
 <section class="section">
   <div class="container is-max-desktop">    
-    <div class="columns is-multiline is-centered">
-      
+    <div class="columns is-centered">
       <div class="column is-4-tablet is-12-mobile">
         <div class="box">
           <model-viewer 
             src="static/glbs/obj_1.glb" 
-            alt="Object 1"
+            alt="Object 1" 
             camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
             style="width: 100%; height: 300px;">
           </model-viewer>
         </div>
       </div>
-
       <div class="column is-4-tablet is-12-mobile">
         <div class="box">
-          <model-viewer src="static/glbs/obj_2.glb" camera-controls style="width: 100%; height: 300px;"></model-viewer>
+          <model-viewer 
+            src="static/glbs/obj_2.glb" 
+            alt="Object 2" 
+            camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
+            style="width: 100%; height: 300px;">
+          </model-viewer>
         </div>
       </div>
-
       <div class="column is-4-tablet is-12-mobile">
         <div class="box">
-          <model-viewer src="static/glbs/obj_3.glb" camera-controls style="width: 100%; height: 300px;"></model-viewer>
-        </div>
-      </div>
-
-      <div class="column is-4-tablet is-12-mobile">
-        <div class="box">
-          <model-viewer src="static/glbs/obj_4.glb" camera-controls style="width: 100%; height: 300px;"></model-viewer>
-        </div>
-      </div>
-
-      <div class="column is-4-tablet is-12-mobile">
-        <div class="box">
-          <model-viewer src="static/glbs/obj_5.glb" camera-controls style="width: 100%; height: 300px;"></model-viewer>
-        </div>
-      </div>
-
-      <div class="column is-4-tablet is-12-mobile">
-        <div class="box">
-          <model-viewer src="static/glbs/obj_6.glb" camera-controls style="width: 100%; height: 300px;"></model-viewer>
+          <model-viewer 
+            src="static/glbs/obj_3.glb" 
+            alt="Object 3" 
+            camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
+            style="width: 100%; height: 300px;">
+          </model-viewer>
         </div>
       </div>
     </div>
+
+    <div class="columns is-centered">
+      <div class="column is-12">
+        <div class="box">
+          <model-viewer 
+            id="bed-room"
+            src="static/glbs/bedroom.glb" 
+            alt="Bedroom Scene"
+            camera-controls
+            camera-orbit="0deg 90deg 5m"
+            min-camera-orbit="-20deg 70deg 5m"
+            max-camera-orbit="20deg 100deg 5m"
+            disable-tap
+            camera-target="-0.2m 1m 0m"
+            shadow-intensity="1"
+            style="width: 100%; height: 500px;">
+          </model-viewer>
+        </div>
+      </div>
     </div>
+
+    <div class="columns is-centered">
+      <div class="column is-4-tablet is-12-mobile">
+        <div class="box">
+          <model-viewer 
+            src="static/glbs/obj_4.glb" 
+            alt="Object 4" 
+            camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
+            style="width: 100%; height: 300px;">
+          </model-viewer>
+        </div>
+      </div>
+      <div class="column is-4-tablet is-12-mobile">
+        <div class="box">
+          <model-viewer 
+            src="static/glbs/obj_5.glb" 
+            alt="Object 5" 
+            camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
+            style="width: 100%; height: 300px;">
+          </model-viewer>
+        </div>
+      </div>
+      <div class="column is-4-tablet is-12-mobile">
+        <div class="box">
+          <model-viewer 
+            src="static/glbs/obj_6.glb" 
+            alt="Object 6" 
+            camera-controls
+            disable-tap
+            min-camera-orbit="auto 90deg auto"
+            max-camera-orbit="auto 90deg auto"
+            style="width: 100%; height: 300px;">
+          </model-viewer>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
+<script>
+  const modelViewer = document.querySelector('#bed-room');
+  
+  // 设置：摆动速度 (越小越慢)
+  const speed = 0.05; 
+  // 设置：摆动幅度 (弧度制，0.8 约等于 45度)
+  const amplitude = 0.4; 
+  
+  let startTime = performance.now();
+
+  const animate = (now) => {
+    // 如果用户正在交互（按住鼠标），暂停自动摆动
+    // model-viewer 的 'interact' 事件可以更精细控制，这里简单处理
+    // 下面这行代码会让相机基于时间生成正弦波运动
+    const time = now - startTime;
+    const theta = Math.sin(time * speed) * amplitude;
+    
+    // 获取当前的 phi (垂直角度) 和 radius (距离)，保持不变
+    // 注意：getCameraOrbit() 返回的是弧度
+    const orbit = modelViewer.getCameraOrbit();
+    const phi = orbit.phi; 
+    const radius = orbit.radius;
+
+    // 设置新的相机轨道 (Theta 动态变化, Phi 和 Radius 保持原样)
+    modelViewer.cameraOrbit = `${theta}rad ${phi}rad ${radius}m`;
+
+    requestAnimationFrame(animate);
+  };
+
+  // 启动动画
+  animate(performance.now());
+</script>
 
 <!--BibTex citation -->
   <section class="section" id="BibTeX">
