add compressed scene

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
         <div class="box">
           <model-viewer 
             id="bed-room"
-            src="static/glbs/bedroom.glb" 
+            src="static/glbs/bedroom_compress.glb" 
             alt="Bedroom Scene"
             camera-controls
             camera-orbit="0deg 90deg 5m"
